<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Office UI Fabric Demo</string>
    <string name="app_title">UI Fabric</string>
    <string name="app_bar_layout_navigation_icon_clicked">Navigation icon clicked.</string>
    <string name="app_bar_layout_menu_flag">Flag</string>
    <string name="app_bar_layout_menu_settings">Settings</string>
    <string name="app_bar_layout_menu_search">Search</string>
    <string name="app_bar_layout_toggle_scroll_behavior_sub_header">Scroll behavior: %s</string>
    <string name="app_bar_layout_toggle_scroll_behavior_button">Toggle scroll behavior</string>
    <string name="app_bar_layout_toggle_navigation_icon_sub_header">Toggle navigation icon</string>
    <string name="app_bar_layout_show_avatar_button">Show avatar</string>
    <string name="app_bar_layout_show_back_icon_button">Show back icon</string>
    <string name="app_bar_layout_hide_icon_button">Hide icon</string>
    <string name="app_bar_layout_show_icon_button">Show icon</string>
    <string name="app_bar_layout_toggle_searchbar_sub_header">Toggle searchbar layout style</string>
    <string name="app_bar_layout_searchbar_accessory_view_button">Show as accessory view</string>
    <string name="app_bar_layout_searchbar_action_view_button">Show as action view</string>
    <string name="app_bar_layout_toggle_theme_sub_header">Toggle between themes (recreates activity)</string>
    <string name="app_bar_layout_toggle_theme_button">Toggle theme</string>
    <string name="app_bar_layout_list_item">Item</string>
    <string name="app_bar_layout_list_sub_header">Extra scrollable content</string>
    <string name="avatar_style_circle">Circle style</string>
    <string name="avatar_style_square">Square style</string>
    <string name="avatar_size_xxlarge">XXLarge</string>
    <string name="avatar_size_xlarge">XLarge</string>
    <string name="avatar_size_large">Large</string>
    <string name="avatar_size_medium">Medium</string>
    <string name="avatar_size_small">Small</string>
    <string name="avatar_size_xsmall">XSmall</string>
    <string name="bottom_navigation_menu_item_photos">Photos</string>
    <string name="bottom_navigation_menu_item_videos">Videos</string>
    <string name="bottom_navigation_menu_item_info">Info</string>
    <string name="bottom_navigation_menu_item_shared">Shared</string>
    <string name="bottom_navigation_menu_item_settings">Settings</string>
    <string name="bottom_navigation_toggle_labels_button">Toggle labels</string>
    <string name="bottom_navigation_three_menu_items_button">Show three menu items</string>
    <string name="bottom_navigation_four_menu_items_button">Show four menu items</string>
    <string name="bottom_navigation_five_menu_items_button">Show five menu items</string>
    <string name="bottom_sheet">BottomSheet</string>
    <string name="bottom_sheet_dialog">BottomSheetDialog</string>
    <string name="bottom_sheet_with_single_line_items">Show with single line items</string>
    <string name="bottom_sheet_with_double_line_items">Show with double line items</string>
    <string name="bottom_sheet_with_single_line_header">Show with single line header</string>
    <string name="bottom_sheet_with_double_line_title_and_dividers">Show with double line header and dividers</string>
    <string name="bottom_sheet_dialog_button">Show</string>
    <string name="bottom_sheet_item_flag_title">Flag</string>
    <string name="bottom_sheet_item_flag_toast">Flag item clicked</string>
    <string name="bottom_sheet_item_reply_title">Reply</string>
    <string name="bottom_sheet_item_reply_toast">Reply item clicked</string>
    <string name="bottom_sheet_item_forward_title">Forward</string>
    <string name="bottom_sheet_item_forward_toast">Forward item clicked</string>
    <string name="bottom_sheet_item_delete_title">Delete</string>
    <string name="bottom_sheet_item_delete_toast">Delete item clicked</string>
    <string name="bottom_sheet_item_camera_title">Camera</string>
    <string name="bottom_sheet_item_camera_subtitle">Take a photo</string>
    <string name="bottom_sheet_item_camera_toast">Camera item clicked</string>
    <string name="bottom_sheet_item_gallery_title">Gallery</string>
    <string name="bottom_sheet_item_gallery_subtitle">View your photos</string>
    <string name="bottom_sheet_item_gallery_toast">Gallery item clicked</string>
    <string name="bottom_sheet_item_videos_title">Videos</string>
    <string name="bottom_sheet_item_videos_subtitle">Play your videos</string>
    <string name="bottom_sheet_item_videos_toast">Videos item clicked</string>
    <string name="bottom_sheet_item_manage_title">Manage</string>
    <string name="bottom_sheet_item_manage_subtitle">Manage your media library</string>
    <string name="bottom_sheet_item_manage_toast">Manage item clicked</string>
    <string name="bottom_sheet_item_single_line_header">Email Actions</string>
    <string name="bottom_sheet_item_double_line_header">Documents</string>
    <string name="bottom_sheet_item_double_line_header_subtitle">Last updated 2:14PM</string>
    <string name="bottom_sheet_item_double_line_header_share">Share</string>
    <string name="bottom_sheet_item_double_line_header_share_toast">Share item clicked</string>
    <string name="bottom_sheet_item_double_line_header_move">Move</string>
    <string name="bottom_sheet_item_double_line_header_move_toast">Move item clicked</string>
    <string name="bottom_sheet_item_double_line_header_delete">Delete</string>
    <string name="bottom_sheet_item_double_line_header_delete_toast">Delete item clicked</string>
    <string name="bottom_sheet_item_double_line_header_info">Info</string>
    <string name="bottom_sheet_item_double_line_header_info_toast">Info item clicked</string>
    <string name="bottom_sheet_item_clock_title">Clock</string>
    <string name="bottom_sheet_item_clock_toast">Clock item clicked</string>
    <string name="bottom_sheet_item_alarm_title">Alarm</string>
    <string name="bottom_sheet_item_alarm_toast">Alarm item clicked</string>
    <string name="bottom_sheet_item_stop_watch_title">Stop watch</string>
    <string name="bottom_sheet_item_stop_watch_toast">Stop watch item clicked</string>
    <string name="bottom_sheet_item_time_zone_title">Time zone</string>
    <string name="bottom_sheet_item_time_zone_toast">Time zone item clicked</string>
    <string name="button">Button</string>
    <string name="button_disabled">Disabled Button</string>
    <string name="button_borderless">Borderless Button</string>
    <string name="button_borderless_disabled">Borderless Disabled Button</string>
    <string name="calendar_example_chosen_date">Choose a date</string>
    <string name="date_time_picker_dialog_date_button">Show date picker</string>
    <string name="date_time_picker_dialog_calendar_date_time_button">Show date time picker with date tab selected</string>
    <string name="date_time_picker_dialog_date_time_calendar_button">Show date time picker with time tab selected</string>
    <string name="date_time_picker_dialog_date_time_button">Show date time picker</string>
    <string name="date_time_picker_dialog_date_start_button">Select start date</string>
    <string name="date_time_picker_dialog_date_time_range_button">Select date time range</string>
    <string name="date_time_picker_dialog_date_end_button">Select end date</string>
    <string name="date_time_picker_dialog_date_picked_default">No date picked</string>
    <string name="date_time_picker_dialog_date_start_picked_default">No start picked</string>
    <string name="date_time_picker_dialog_date_end_picked_default">No end picked</string>
    <string name="date_time_picker_example_no_duration_title">Single Date</string>
    <string name="date_time_picker_example_date_range_title">Date Range</string>
    <string name="date_time_picker_example_date_time_range_title">Date Time Range</string>
    <string name="date_time_picker_example_date_range_start_title">Start:</string>
    <string name="date_time_picker_example_date_range_end_title">End:</string>
    <string name="drawer_button">Show drawer</string>
    <string name="drawer_dialog_button">Show drawer dialog</string>
    <string name="list_item_title">Title, primary text</string>
    <string name="list_item_subtitle">Subtitle, secondary text</string>
    <string name="list_item_footer">Footer, tertiary text</string>
    <string name="list_item_sub_header_single_line">Single-line list with gray sub header text</string>
    <string name="list_item_sub_header_two_line">Two-line list</string>
    <string name="list_item_sub_header_two_line_dense">Two-line list with dense spacing</string>
    <string name="list_item_sub_header_three_line">Three-line list with black sub header text</string>
    <string name="list_item_sub_header_no_custom_views">List items with no custom views</string>
    <string name="list_item_sub_header_large_header">List items with large custom views</string>
    <string name="list_item_sub_header_wrapped_text">List items with wrapped text</string>
    <string name="list_item_sub_header_truncated_text">List items with truncated text</string>
    <string name="list_item_sub_header_custom_accessory_text">Action</string>
    <string name="list_item_truncation_middle">Middle truncation.</string>
    <string name="list_item_truncation_end">End truncation.</string>
    <string name="list_item_truncation_start">Start truncation.</string>
    <string name="list_item_custom_text_view">Value</string>
    <string name="list_item_click">You clicked on the list item.</string>
    <string name="list_item_click_custom_accessory_view">You clicked on the custom accessory view.</string>
    <string name="list_item_click_sub_header_custom_accessory_view">You clicked on the sub header custom accessory view.</string>
    <string name="people_picker_select_example">Select</string>
    <string name="people_picker_select_deselect_example">SelectDeselect</string>
    <string name="people_picker_none_example">None</string>
    <string name="people_picker_delete_example">Delete</string>
    <string name="people_picker_custom_persona_description">This example shows how to create a custom IPersona object.</string>
    <string name="persona_email_cecil_folk">cfolk@microsoft.com</string>
    <string name="persona_email_kat_larsson">klarsson@microsoft.com</string>
    <string name="persona_email_mauricio_august">maugust@microsoft.com</string>
    <string name="persona_email_mona_kane">mkane@microsoft.com</string>
    <string name="persona_footer">Available</string>
    <string name="persona_name_cecil_folk">Cecil Folk</string>
    <string name="persona_name_kat_larsson">Kat Larsson</string>
    <string name="persona_name_mauricio_august">Mauricio August</string>
    <string name="persona_name_mona_kane">Mona Kane</string>
    <string name="persona_chip_example_error">Error Persona Chip</string>
    <string name="persona_chip_example_no_icon">Persona Chip with no close icon</string>
    <string name="persona_chip_example_basic">Basic Persona Chip</string>
    <string name="calculate_cells">Load/calculate 100 cells</string>
    <string name="calculate_layouts">Load/calculate 100 layouts</string>
    <string name="template_list">Template List</string>
    <string name="regular_list">Regular List</string>
    <string name="cell_example_title">Title: Cell</string>
    <string name="cell_example_description">Description: Tap to change orientation</string>
    <string name="headline">Headline is Light 28sp</string>
    <string name="title_1">Title 1 is Medium 20sp</string>
    <string name="title_2">Title 2 is Regular 20sp</string>
    <string name="heading">Heading is Regular 18sp</string>
    <string name="body_1">Body 1 is Regular 14sp</string>
    <string name="body_2">Body 2 is Medium 14sp</string>
    <string name="caption">Caption is Regular 12sp</string>
</resources>