<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_layout_margin">

    <TextView
        android:id="@+id/typography_example_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_view_margin"
        android:text="@string/headline"
        android:textAppearance="@style/UIFabric_Headline"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/typography_example_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_view_margin"
        android:text="@string/title_1"
        android:textAppearance="@style/UIFabric_Title1"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/typography_example_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_view_margin"
        android:text="@string/title_2"
        android:textAppearance="@style/UIFabric_Title2"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/typography_example_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_view_margin"
        android:text="@string/heading"
        android:textAppearance="@style/UIFabric_Heading"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/typography_example_subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_view_margin"
        android:text="@string/subheading"
        android:textAppearance="@style/UIFabric_SubHeading"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/typography_example_body_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_view_margin"
        android:text="@string/body_1"
        android:textAppearance="@style/UIFabric_Body1"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/typography_example_body_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_view_margin"
        android:text="@string/body_2"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/typography_example_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_view_margin"
        android:text="@string/caption"
        android:textAppearance="@style/UIFabric_Caption"
        android:textColor="@android:color/black"/>

</LinearLayout>